# Website

./: .dockerignore  .editorconfig  .git-blame-ignore-revs  .gitattributes  .gitignore  .ignore  .jshintrc  .mypy.ini  .pre-commit-config.yaml  .travis.yml  Dockerfile  Dockerfile.prod  Makefile  Pipfile  README.md  TODO  Vagrantfile  archive-var.sh  base24.py  calendars.json  company.html  core  dev_server.py  docker-compose.ci.yml  docker-compose.kelvin.yml  docker-compose.orchestrator.yml  docker-compose.prod.yml  docker-compose.test.yml  docker-compose.yml  emfcamp.wsgi  fix_flask_admin.py  flask  gulpfile.js  gunicorn.py  index.html  logger.py  logging.conf  logging.yaml  loggingmanager.py  main.py  (+18 more)
.devcontainer/: devcontainer.json
.devcontainer/full/: devcontainer.json
.devcontainer/minimal/: devcontainer.json
.github/: CONTRIBUTING.md
.github/workflows/: base.yml  codeql-analysis.yml  deploy.yml  main.yml  pr.yml  test.yml
ad-hoc-scripts/: collect_ticket_data.py  compare-slugs.py  databases.cfg  dump_emf.sh  export_upstream_for_arrivals.sh
apps/: admin.py  arrivals.py  base.py  cfp.py  cfp_review.py  config.py  majority_judgement.py  metrics.py  schedule.py  schedule_xml.py  tickets.py  users.py
apps/admin/: __init__.py  accounts.py  admin_message.py  arrivals.py  email.py  flask_admin_base.py  forms.py  hire.py  payments.py  products.py  reports.py  search.py  tickets.py  users.py
apps/api/: __init__.py  installations.py  map.py  schedule.py  user.py  villages.py
apps/base/: __init__.py  about.py  arcade.py  code_of_conduct.py  installations.py  jobs_board.py  postmark.py  (+9 more)
config/: content_types.json  development-example.cfg  development.cfg  kelvin.cfg  orchestrator.cfg  test.cfg  travis.cfg
css/: _about.scss  _about_badge.scss  _about_phones.scss  _about_what-to-expect.scss  _account.scss  _attendee_content.scss  _bar_training.scss  _base.scss  _buttons.scss  _cfp.scss  _footer.scss  _forms.scss  _header.scss  _jobs_board.scss  _lineup.scss  _main_grid.scss  _non_prod_banner.scss  _panel_grid.scss  _responsive_table.scss  _secondary_nav.scss  _sponsorship.scss  _support.scss  _tables.scss  _tickets.scss  _time_machine.scss  _tooltips.scss  _utilities.scss  _variables.scss  _video.scss  _village.scss  _villages.scss  _volunteer.scss  _wiki.scss  _workshop-steward.scss  admin.scss  arrivals.scss  dhtmlxscheduler_flat.css  flask-admin.scss  invoice.scss  main.scss  (+4 more)
docker/: Dockerfile.base  Dockerfile.base-dev  Dockerfile.base-dev.dockerignore  Dockerfile.base.dockerignore  app_entrypoint.sh  dev_entrypoint.sh  liveness_check.sh  prod_entrypoint.sh  startup-irc-notify.sh  test_entrypoint.sh  wait_until_active.sh
docs/: CFP_E2E.md  CHANGES.md  branches.md  cfp.md  cfp_states.md  conf.py  contributing.md  deployment.md  development.md  documentation.md  index.rst  migrate.txt  mobile_passes.md  payment-flow.graffle  testing.md  testplan.txt  ticket-model-example.graffle  ticket_states.md  ticket_view_notes.txt  volunteers.txt  wise.md
error_pages/: 500.html  ratelimit.html
exports/: Untitled.ipynb
js/: arrivals.js  dhtmlx_scheduler.js  dhtmlxscheduler_all_timed.js  event-tickets.js  jobs_board.js  line-up.js  lottery.js  main.js  notifications.js  sandboxed-iframe-child.js  sandboxed-iframe-parent.js  sandboxed-iframe.js  schedule.js  serviceworker.js  shift_templates.js  volunteer-schedule.js  volunteer_schedule.js  workshop-steward.js
lib/: slotmachine.py
migrations/: alembic.ini  env.py
models/: __init__.py  admin_message.py  arrivals.py  basket.py  capacity.py  cfp.py  cfp_tag.py  diversity.py  email.py  event_tickets.py  exc.py  feature_flag.py  ical.py  ical_source.py  lottery.py  map.py  mixins.py  notifications.py  oidc.py  payment.py  permission.py  product.py  product_group.py  purchase.py  scheduled_task.py  site_state.py  test_user.py  ticket.py  user.py  user_diverstiy.py  village.py  volunteers.py  web_push.py  wiki.py
static/: hackerspace_email.txt  index.html  test_schedule.ical
talks/: emw-talks.json  friday.csv  saturday.csv  sunday.csv
tasks/: admin.py  banking.py  cfp.py  dev.py  exportdb.py  external_calendars.py  match_videos.py  schedule.py  tickets.py
templates/: _datehelpers.html  _diversityform.html  _footer.html  _formhelpers.html  _nav.html  _receipthelpers.html  _ticket_modal.html  about.html  account.html  admin.html  admin_make_admin.html  admin_manual_reconcile.html  admin_manual_reconcile_yesno.html  admin_ticket_types.html  base.html  branding.html  buy-tickets.html  cfp-complete.html  cfp-edit.html  cfp-guidance.html  cfp-proposals.html  cfp-submission.txt  cfp.html  cfp_complete.html  cfp_proposals.html  code-of-conduct.html  company.html  contact.html  design.html  diversity.html  email-tickets.txt  email_in_use_warning.html  emp.html  feedback.html  forgot-password.html  forgot_password.html  get_involved.html  gocardless-cancel.html  gocardless-complete.html  gocardless-discard-yesno.html  (+81 more)
tests/: 2014_proposals.csv  _utils.py  account.ofx  conftest.py  core.py  frabs_schema.xml  test-email.py  test_api_c3voc.py  test_api_occurrences.py  test_api_proposals.py  test_basic.py  test_calculate_price_ex_vat.py  test_cfp.py  test_cfp_e2e.py  test_cfp_sense_check.py  test_cfp_voting.py  test_email_webhooks.py  test_epc.py  test_epc.py.inactive  test_export.py  test_frab_export.py  test_frabs_export.py  test_invoice.py  test_payment.py  test_product_group.py  test_product_view.py  test_purchase.py  test_receipt.py  test_receipt.py.inactive  test_schedule.py  test_schedule_data.py  test_scheduled_tasks.py  test_sql_query_count.py  test_tickets.py  test_users_app.py  test_users_calendar.py  test_users_model.py  test_village_rendering.py  test_volunteer_shift_generation.py  test_webhooks.py
utils/: banking.py  collect_ticket_data.py  dump_upstream.sh  dump_volunteers.sh  export_volunteer_users.sh  external_calendars.py  import_upstream_on_arrivals.sh  restore_upstream.sh  schedule.py
var/: README
views/: __init__.py  admin.py  arrivals.py  basic.py  cfp.py  radio.py  tickets.py  users.py  volunteers.py
(+1491 files in other folders)
